--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -17,14 +17,14 @@
         android:layout_marginRight="26dp"
         android:layout_marginBottom="8dp"
         android:foregroundGravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/txtEmailLog"
+        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/txtEmailLog"
+        android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -36,11 +36,12 @@
         android:textColorHint="@color/colorWhite"
         app:boxBackgroundColor="@color/colorWhite"
         app:boxStrokeColor="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/txtmdp"
+        app:layout_constraintBottom_toTopOf="@+id/tilmdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/txtEmailLog"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:ems="10"
@@ -59,9 +60,9 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/txtmdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/tilmdp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="200dp"
@@ -71,7 +72,7 @@
         android:textColorHint="@color/colorWhite"
         app:boxBackgroundColor="@color/colorWhite"
         app:boxStrokeColor="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/btnConx"
+        app:layout_constraintBottom_toTopOf="@+id/btnConn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:passwordToggleDrawable="@drawable/icon_selector"
@@ -79,6 +80,7 @@
         app:passwordToggleTint="@color/colorBoutonfcbk">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/txtmdp"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:ems="10"
@@ -97,7 +99,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/btnConx"
+        android:id="@+id/btnConn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="26dp"
